Fix vertical layout problems (#287)
* fix: remove extra sidebar div

* style: remove left margin with vertical layout

* feat: add burger button functionality

--- a/assets/scss/layouts/main.scss
+++ b/assets/scss/layouts/main.scss
@@ -1,48 +1,66 @@
 #main {
-    margin-left: 300px;
+  margin-left: 0;
+  padding: 2rem;
+  min-height: 100vh;
+
+  &.layout-navbar {
+    padding: 0;
+    transition: margin-left 0.5s ease-out
+  }
+
+  &.layout-horizontal {
+    padding: 0;
+    margin: 0;
+  }
+
+  #main-content {
     padding: 2rem;
-    min-height: 100vh;
-    @media screen and (max-width: 1199px) {
-        margin-left: 0;
-    }
-    &.layout-navbar {
-        padding: 0;
-        transition: margin-left 0.5s ease-out
-    }
-    &.layout-horizontal {
-        padding: 0;
-        margin: 0;
-    }
-    #main-content {
-        padding: 2rem;
-    }
+  }
 }
+
 #main, #main-content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
+
 #main-content, .page-heading {
-    flex-grow: 1;
+  flex-grow: 1;
 }
+
 .page-heading {
-    margin:  0 0 2rem;
-    h3 {
-        font-weight: bold;
-    }
+  margin: 0 0 2rem;
+
+  h3 {
+    font-weight: bold;
+  }
 }
+
 .page-title-headings {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: .5rem;
-    h3 {
-        margin-bottom: 0;
-        margin-right: 1rem;
-    }
-    .breadcrumb {
-        margin-bottom: 0;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: .5rem;
+
+  h3 {
+    margin-bottom: 0;
+    margin-right: 1rem;
+  }
+
+  .breadcrumb {
+    margin-bottom: 0;
+  }
 }
+
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  #main {
+    margin-left: 300px;
+  }
+
+  #sidebar:not(.active) + #main {
+    margin-left: 0;
+  }
 }
